--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "echo",
             "type": "shell",
-            "command": "g++ -g main.cpp main.h",
+            "command": "g++ -g -o sim.exe main.cpp",
             "group": {
                 "kind": "build",
                 "isDefault": true
