--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,13 @@ BasSim.code-workspace
 Research/.~lock.papers.xls#
 Research/~$papers.xlsx
 ~$papers.xlsx
+OWF/.vs/OWF/v16/Browse.VC.db
+OWF/.vs/OWF/v16/Browse.VC.opendb
+OWF/.vs/OWF/v16/ipch/AutoPCH/79d511825df95bfb/OPTIMISER.ipch
+OWF/Optimiser/x64/Debug/Optimiser.obj
+OWF/Optimiser/x64/Debug/Optimiser.tlog/CL.read.1.tlog
+OWF/Optimiser/x64/Debug/vc142.idb
+OWF/Optimiser/x64/Debug/vc142.pdb
+OWF/x64/Debug/Optimiser.exe
+OWF/x64/Debug/Optimiser.ilk
+OWF/x64/Debug/Optimiser.pdb
