--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,21 @@ OWF/Optimiser/x64/Debug/vc142.pdb
 OWF/x64/Debug/Optimiser.exe
 OWF/x64/Debug/Optimiser.ilk
 OWF/x64/Debug/Optimiser.pdb
+Code/.vs/OWF/v16/.suo
+Code/.vs/OWF/v16/Browse.VC.db
+Code/.vs/OWF/v16/ipch/AutoPCH/54a43b35f5a76f03/OPTIMISER.ipch
+Code/.vs/OWF/v16/ipch/AutoPCH/79d511825df95bfb/OPTIMISER.ipch
+Code/Optimiser/x64/Debug/Optimiser.log
+Code/Optimiser/x64/Debug/Optimiser.obj
+Code/Optimiser/x64/Debug/Optimiser.tlog/CL.command.1.tlog
+Code/Optimiser/x64/Debug/Optimiser.tlog/CL.read.1.tlog
+Code/Optimiser/x64/Debug/Optimiser.tlog/CL.write.1.tlog
+Code/Optimiser/x64/Debug/Optimiser.tlog/link.command.1.tlog
+Code/Optimiser/x64/Debug/Optimiser.tlog/link.read.1.tlog
+Code/Optimiser/x64/Debug/Optimiser.tlog/link.write.1.tlog
+Code/Optimiser/x64/Debug/Optimiser.tlog/Optimiser.lastbuildstate
+Code/Optimiser/x64/Debug/vc142.idb
+Code/Optimiser/x64/Debug/vc142.pdb
+Code/x64/Debug/Optimiser.exe
+Code/x64/Debug/Optimiser.ilk
+Code/x64/Debug/Optimiser.pdb
