--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ Code/Optimiser/x64/Debug/vc142.pdb
 Code/x64/Debug/Optimiser.exe
 Code/x64/Debug/Optimiser.ilk
 Code/x64/Debug/Optimiser.pdb
+Code/.vs/OWF/v16/Browse.VC.opendb
+Code/.vs/OWF/v16/ipch/AutoPCH/37b0d3981935929b/OPTIMISER.ipch
