--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ TimeScheduler/build/scheduler/warn-scheduler.txt
 TimeScheduler/build/scheduler/xref-scheduler.html
 TimeScheduler/dist/scheduler.exe
 TimeScheduler/scheduler.spec
+Code/Optimiser/install.sol
