Fixed newVar to work

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ TimeScheduler/build/scheduler/xref-scheduler.html
 TimeScheduler/dist/scheduler.exe
 TimeScheduler/scheduler.spec
 Code/Optimiser/install.sol
+Code/Optimiser/~$SolutionChecker.xlsx
