--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ TimeScheduler/dist/scheduler.exe
 TimeScheduler/scheduler.spec
 Code/Optimiser/install.sol
 Code/Optimiser/~$SolutionChecker.xlsx
+Code/Optimiser/~$RowCol calcs.xlsx
