Finished Mode class

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ TimeScheduler/scheduler.spec
 Code/Optimiser/install.sol
 Code/Optimiser/~$SolutionChecker.xlsx
 Code/Optimiser/~$RowCol calcs.xlsx
+*.sol
