Added new locks

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,6 @@ Code/Optimiser/~$RowCol calcs.xlsx
 Code/Optimiser/Output files/lifeSimpleSubmodes.csv
 Code/Optimiser/Output files/lifeSimpleSettings.csv
 Code/Optimiser/Output files/lifeSimpleModes.csv
+Code/Optimiser/Output files/lifeWeekModes.csv
+Code/Optimiser/Output files/lifeWeekSettings.csv
+Code/Optimiser/Output files/lifeWeekSubmodes.csv
