--- a/Code/Optimiser/Optimiser.vcxproj.filters
+++ b/Code/Optimiser/Optimiser.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Optimiser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Mode.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
