--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,8 @@ Code/Optimiser/Output files/lifeSimpleSettings.csv
 Code/Optimiser/Output files/lifeSimpleModes.csv
 *.log
 *.xtr
+Code/Optimiser/x64/Debug/Stochastic.obj
+Code/Optimiser/x64/Debug/Optimiser.vcxproj.FileListAbsolute.txt
+Code/Optimiser/x64/Debug/Mode.obj
+Code/Optimiser/x64/Debug/Main.obj
+Code/Optimiser/x64/Debug/Deterministic.obj
