--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ Code/Optimiser/x64/Debug/Optimiser.vcxproj.FileListAbsolute.txt
 Code/Optimiser/x64/Debug/Mode.obj
 Code/Optimiser/x64/Debug/Main.obj
 Code/Optimiser/x64/Debug/Deterministic.obj
+*.ipch
