--- a/Code/Optimiser/Optimiser.vcxproj
+++ b/Code/Optimiser/Optimiser.vcxproj
@@ -163,13 +163,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Deter.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Deterministic.cpp" />
     <ClCompile Include="Mode.cpp" />
+    <ClCompile Include="Optimiser.cpp" />
     <ClCompile Include="Stochastic.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Deter.h" />
     <ClInclude Include="Deterministic.h" />
+    <ClInclude Include="Optimiser.h" />
     <ClInclude Include="Stochastic.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
