--- a/Code/Optimiser/Optimiser.vcxproj
+++ b/Code/Optimiser/Optimiser.vcxproj
@@ -169,12 +169,14 @@
     <ClCompile Include="Mode.cpp" />
     <ClCompile Include="Optimiser.cpp" />
     <ClCompile Include="Stochastic.cpp" />
+    <ClCompile Include="Weathergen.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Deter.h" />
     <ClInclude Include="Deterministic.h" />
     <ClInclude Include="Optimiser.h" />
     <ClInclude Include="Stochastic.h" />
+    <ClInclude Include="Weathergen.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
