Fixed Deter class, works now

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,5 @@ Code/Optimiser/x64/Debug/Mode.obj
 Code/Optimiser/x64/Debug/Main.obj
 Code/Optimiser/x64/Debug/Deterministic.obj
 *.ipch
+Code/.vs/OWF/v16/ipch/AutoPCH/a5d293f65e897ea2/MAIN.ipch
+*.ipch
