--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,5 @@ Code/.vs/OWF/v16/ipch/AutoPCH/a5d293f65e897ea2/MAIN.ipch
 Code/Optimiser/Output files/stoYearLRModes.csv
 Code/Optimiser/Output files/stoYearLRSettings.csv
 Code/Optimiser/Output files/stoYearLRSubmodes.csv
+Code/Optimiser/Output files/stoYearLR2Modes.csv
+Code/Optimiser/Output files/stoYearMRModes.csv
