--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@ Code/Optimiser/Output files/stoYearLRModes.csv
 *.ipch
 Code/Optimiser/Output files/stoYearMRModes.csv
 Code/Optimiser/Output files/stoYearLR2Modes.csv
+MovieSoundtrackQuiz.txt
