--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,5 @@ Code/Optimiser/Output files/stoYearLRModes.csv
 Code/Optimiser/Output files/stoYearMRModes.csv
 Code/Optimiser/Output files/stoYearLR2Modes.csv
 MovieSoundtrackQuiz.txt
+Code/.vs/OWF/v16/Solution.VC.db-shm
+Code/.vs/OWF/v16/Solution.VC.db-wal
