Wrote Month::genSol and tests for it (currently not working)

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,4 @@ Code/x64/Debug/Overlap.exe
 *.tlog
 Code/Overlap/x64/Debug/vc142.idb
 Code/Overlap/x64/Debug/vc142.pdb
+Code/Overlap/x64/Debug/Overlap.vcxproj.FileListAbsolute.txt
