Fixed mixed datagen

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@ Code/x64/Debug/Overlap.exe
 Code/Overlap/x64/Debug/vc142.idb
 Code/Overlap/x64/Debug/vc142.pdb
 Code/Overlap/x64/Debug/Overlap.vcxproj.FileListAbsolute.txt
+Code/Overlap/x64/Debug/datagen.obj.enc
