--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,4 @@ Code/Overlap/x64/Debug/vc142.idb
 Code/Overlap/x64/Debug/vc142.pdb
 Code/Overlap/x64/Debug/Overlap.vcxproj.FileListAbsolute.txt
 Code/Overlap/x64/Debug/datagen.obj.enc
+Code/Overlap/x64/Debug/monthmodel.new.obj.enc
