--- a/Code/Overlap/Overlap.vcxproj.filters
+++ b/Code/Overlap/Overlap.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Weather.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MathHelp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Model.h">
@@ -66,6 +69,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Weather.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MathHelp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
