Updated data reader to process inline comments

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,4 @@ Code/Overlap/x64/Debug/vc142.pdb
 Code/Overlap/x64/Debug/Overlap.vcxproj.FileListAbsolute.txt
 Code/Overlap/x64/Debug/datagen.obj.enc
 Code/Overlap/x64/Debug/monthmodel.new.obj.enc
+Data/~$Installation_data_RK.xlsx
