--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,25 @@ Code/Overlap/Input Files/~$Experiment setups.xlsx
 *.db-shm
 *.db-wal
 ~$Results.xlsx
+*.pper
+R/.Rproj.user/7DA36B1A/rmd-outputs
+R/.Rproj.user/7DA36B1A/saved_source_markers
+R/.Rproj.user/7DA36B1A/sources/prop/531667D9
+R/.Rproj.user/7DA36B1A/sources/prop/D7903CD5
+R/.Rproj.user/7DA36B1A/sources/prop/INDEX
+R/.Rproj.user/7DA36B1A/sources/s-396C5D89/30E226D6
+R/.Rproj.user/7DA36B1A/sources/s-396C5D89/30E226D6-contents
+R/.Rproj.user/7DA36B1A/sources/s-396C5D89/4F7E4C44
+R/.Rproj.user/7DA36B1A/sources/s-396C5D89/4F7E4C44-contents
+R/.Rproj.user/7DA36B1A/sources/s-396C5D89/5BEA4D72
+R/.Rproj.user/7DA36B1A/sources/s-396C5D89/5BEA4D72-contents
+R/.Rproj.user/7DA36B1A/sources/s-396C5D89/8EF89AA3
+R/.Rproj.user/7DA36B1A/sources/s-396C5D89/8EF89AA3-contents
+R/.Rproj.user/7DA36B1A/sources/s-396C5D89/B2434551
+R/.Rproj.user/7DA36B1A/sources/s-396C5D89/B2434551-contents
+R/.Rproj.user/7DA36B1A/sources/s-396C5D89/lock_file
+R/.Rproj.user/7DA36B1A/viewer-cache/20C7AF84.Rdata
+R/.Rproj.user/7DA36B1A/viewer-cache/3054643A.Rdata
+R/.Rproj.user/7DA36B1A/viewer-cache/9B3743B1.Rdata
+R/.Rproj.user/shared/notebooks/patch-chunk-names
+R/.Rproj.user/shared/notebooks/paths
