--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,9 @@ R/.Rproj.user/7DA36B1A/viewer-cache/3054643A.Rdata
 R/.Rproj.user/7DA36B1A/viewer-cache/9B3743B1.Rdata
 R/.Rproj.user/shared/notebooks/patch-chunk-names
 R/.Rproj.user/shared/notebooks/paths
+R/.Rproj.user/7DA36B1A/sources/per/t/D7810F70
+R/.Rproj.user/7DA36B1A/sources/per/t/D7810F70-contents
+R/.Rproj.user/7DA36B1A/sources/per/t/DC2755DB
+R/.Rproj.user/7DA36B1A/sources/per/t/DC2755DB-contents
+R/.Rproj.user/7DA36B1A/sources/prop/794D5E47
+R/.Rproj.user/7DA36B1A/sources/prop/CD3C08F4
