--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,6 @@ R/.Rproj.user/7DA36B1A/sources/per/t/DC2755DB
 R/.Rproj.user/7DA36B1A/sources/per/t/DC2755DB-contents
 R/.Rproj.user/7DA36B1A/sources/prop/794D5E47
 R/.Rproj.user/7DA36B1A/sources/prop/CD3C08F4
+R/.Rproj.user/7DA36B1A/sources/per/t/48E77026
+R/.Rproj.user/7DA36B1A/sources/per/t/48E77026-contents
+R/.Rproj.user/7DA36B1A/viewer-cache/F754D778.Rdata
