--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,10 @@ R/.Rproj.user/7DA36B1A/sources/prop/CD3C08F4
 R/.Rproj.user/7DA36B1A/sources/per/t/48E77026
 R/.Rproj.user/7DA36B1A/sources/per/t/48E77026-contents
 R/.Rproj.user/7DA36B1A/viewer-cache/F754D778.Rdata
+R/.Rproj.user/7DA36B1A/sources/s-3BCD4C87/DC2755DB-contents
+R/.Rproj.user/7DA36B1A/sources/s-3BCD4C87/DC2755DB
+R/.Rproj.user/7DA36B1A/sources/s-3BCD4C87/48E77026
+R/.Rproj.user/7DA36B1A/sources/s-3BCD4C87/48E77026-contents
+R/.Rproj.user/7DA36B1A/sources/s-3BCD4C87/D7810F70
+R/.Rproj.user/7DA36B1A/sources/s-3BCD4C87/D7810F70-contents
+R/.Rproj.user/7DA36B1A/sources/s-3BCD4C87/lock_file
